test_regress/t/t_assert_throughout_unsup.out
%Error-UNSUPPORTED: t/t_assert_throughout_unsup.v:12:7: Unsupported: throughout with range delay sequence
                                                      : ... note: In instance 't'
   12 |     a throughout (b ##[1:2] c));
      |       ^~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_assert_throughout_unsup.v:16:7: Unsupported: throughout with complex sequence operator
                                                      : ... note: In instance 't'
   16 |     a throughout (b and c));
      |       ^~~~~~~~~~
%Error: Exiting due to
